Modification controleur frameplateau panelplateau et jeu